syntax = "proto3";

package test.nested.user.v1;

option go_package = "github.com/test/nested/user/v1;userv1";

// Nested package service for testing directory structure
service UserManager {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

service UserAuth {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
}

message CreateUserResponse {
    string user_id = 1;
}

message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {
    bool success = 1;
}
